FA Sniffer: Much work to get archiver and reader working.  Can now read long blocks of data without causing dropouts in transfer.
git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@43306 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -30,9 +30,10 @@ prepare_SRCS += error.c
 prepare_SRCS += disk.c
 
 
+all: $(BUILD)
+
 define expand_build
 $(target): $($(target)_SRCS:.c=.o)
-all: $(target)
 endef
 $(foreach target,$(BUILD),$(eval $(expand_build)))
 
