FA Sniffer: Add some extra compiler flags and deal with resulting errors
git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@48094 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,9 +1,24 @@
+# This Makefile is invoked by makefile after setting the working directory to
+# the build directory.
+
 all:    # Default target comes first!
 
 CFLAGS += -std=gnu99
-CFLAGS += -O2 -Werror -Wall -Wextra
+CFLAGS += -O2
+
+CFLAGS += -Werror
+CFLAGS += -Wall -Wextra
 CFLAGS += -Wno-unused-parameter
 CFLAGS += -Wno-missing-field-initializers
+CFLAGS += -Wundef
+CFLAGS += -Wshadow
+CFLAGS += -Wcast-align
+CFLAGS += -Wwrite-strings
+CFLAGS += -Wpointer-arith
+CFLAGS += -Wredundant-decls
+CFLAGS += -Wmissing-prototypes
+CFLAGS += -Wmissing-declarations
+CFLAGS += -Wstrict-prototypes
 
 CPPFLAGS += -D_GNU_SOURCE
 CPPFLAGS += -D_FILE_OFFSET_BITS=64
@@ -34,6 +49,7 @@ all: $(BUILD)
 
 define expand_build
 $(target): $($(target)_SRCS:.c=.o)
+	$$(LINK.o) $$^ $$(LOADLIBES) $$(LDLIBS) -o $$@
 endef
 $(foreach target,$(BUILD),$(eval $(expand_build)))
 
