FA Sniffer: Add preliminary support for socket API to archiver.
Also increase the FA_BLOCK_SIZE to match the maximum IO unit as found
experimentally.

git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@48095 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -34,6 +34,7 @@ archiver_SRCS += buffer.c
 archiver_SRCS += sniffer.c
 archiver_SRCS += disk_writer.c
 archiver_SRCS += disk.c
+archiver_SRCS += socket_server.c
 
 read_SRCS += read.c
 read_SRCS += error.c
