--- a/tools/Makefile
+++ b/tools/Makefile
@@ -5,6 +5,7 @@ all:    # Default target comes first!
 
 CFLAGS += -std=gnu99
 CFLAGS += -O2
+# CFLAGS += -g
 
 CFLAGS += -Werror
 CFLAGS += -Wall -Wextra
@@ -35,6 +36,7 @@ archiver_SRCS += sniffer.c
 archiver_SRCS += disk_writer.c
 archiver_SRCS += disk.c
 archiver_SRCS += socket_server.c
+archiver_SRCS += mask.c
 
 read_SRCS += read.c
 read_SRCS += error.c
