FA sniffer: Implement capture tool for writing live FA data to disk
git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@48098 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -27,7 +27,7 @@ CPPFLAGS += -D_FILE_OFFSET_BITS=64
 LDFLAGS += -lpthread -lrt
 
 
-BUILD = archiver read prepare
+BUILD = archiver read prepare capture
 
 archiver_SRCS += archiver.c
 archiver_SRCS += error.c
@@ -46,6 +46,11 @@ read_SRCS += disk.c
 prepare_SRCS += prepare.c
 prepare_SRCS += error.c
 prepare_SRCS += disk.c
+
+capture_SRCS += capture.c
+capture_SRCS += error.c
+capture_SRCS += mask.c
+capture_SRCS += matlab.c
 
 
 all: $(BUILD)
