FA sniffer: Refactor read to use matlab support
git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@48099 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -42,6 +42,7 @@ read_SRCS += read.c
 read_SRCS += error.c
 read_SRCS += mask.c
 read_SRCS += disk.c
+read_SRCS += matlab.c
 
 prepare_SRCS += prepare.c
 prepare_SRCS += error.c
