FA sniffer: Preliminary work towards adding readout support
git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@49471 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -27,7 +27,7 @@ CPPFLAGS += -D_FILE_OFFSET_BITS=64
 LDFLAGS += -lpthread -lrt -lm
 
 
-BUILD = archiver read prepare capture
+BUILD = archiver prepare capture
 
 archiver_SRCS += archiver.c
 archiver_SRCS += error.c
@@ -38,6 +38,7 @@ archiver_SRCS += disk.c
 archiver_SRCS += socket_server.c
 archiver_SRCS += mask.c
 archiver_SRCS += transform.c
+archiver_SRCS += reader.c
 
 read_SRCS += read.c
 read_SRCS += error.c
