FA sniffer: Add common parsing framework
git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@49476 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -39,6 +39,7 @@ archiver_SRCS += socket_server.c
 archiver_SRCS += mask.c
 archiver_SRCS += transform.c
 archiver_SRCS += reader.c
+archiver_SRCS += parse.c
 
 read_SRCS += read.c
 read_SRCS += error.c
@@ -50,11 +51,13 @@ prepare_SRCS += prepare.c
 prepare_SRCS += error.c
 prepare_SRCS += disk.c
 prepare_SRCS += mask.c
+prepare_SRCS += parse.c
 
 capture_SRCS += capture.c
 capture_SRCS += error.c
 capture_SRCS += mask.c
 capture_SRCS += matlab.c
+capture_SRCS += parse.c
 
 
 all: $(BUILD)
