FA sniffer: Changes to implementation of locking
git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@50911 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -40,6 +40,7 @@ archiver_SRCS += mask.c
 archiver_SRCS += transform.c
 archiver_SRCS += reader.c
 archiver_SRCS += parse.c
+archiver_SRCS += locking.c
 
 read_SRCS += read.c
 read_SRCS += error.c
@@ -52,12 +53,14 @@ prepare_SRCS += error.c
 prepare_SRCS += disk.c
 prepare_SRCS += mask.c
 prepare_SRCS += parse.c
+prepare_SRCS += locking.c
 
 capture_SRCS += capture.c
 capture_SRCS += error.c
 capture_SRCS += mask.c
 capture_SRCS += matlab.c
 capture_SRCS += parse.c
+capture_SRCS += locking.c
 
 
 all: $(BUILD)
