FA sniffer: Initial working version of decimated data
Capture of single decimated data over the wire now works, but is rather
slower than it should be for long captures.  Many changes to reader.c,
including changing the order in which decimated data is stored to help
with readout.

Fix a really very tricky bug in the use of the _mm_stream_pi() intrinsic
(used to optimise the heavy duty data transpose operation).  After using
any SSE functions it is necessary to call _mm_empty() to reset the
floating point register stack, otherwise all subsequent floating point
operations mysteriously fail!

git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@50917 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -19,7 +19,12 @@ CFLAGS += -Wredundant-decls
 CFLAGS += -Wmissing-prototypes
 CFLAGS += -Wmissing-declarations
 CFLAGS += -Wstrict-prototypes
+
 CFLAGS += -msse
+CFLAGS += -msse2
+CFLAGS += -mfpmath=sse
+CFLAGS += -march=pentium4
+CFLAGS += -ffast-math
 
 CPPFLAGS += -D_GNU_SOURCE
 CPPFLAGS += -D_FILE_OFFSET_BITS=64
