FA sniffer: Provide a bit more control over build
Change built programs to begin with the prefix fa-, and rename the
viewer accordingly.

git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@50978 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,5 +1,7 @@
 # This Makefile is invoked by makefile after setting the working directory to
-# the build directory.
+# the $(BUILD) directory.
+
+PROGRAM_PREFIX = fa-
 
 all:    # Default target comes first!
 
@@ -58,10 +60,10 @@ capture_SRCS += capture.c           # Command line interface
 capture_SRCS += matlab.c            # Matlab header support
 
 
-all: $(BUILD)
+all: $(patsubst %,$(PROGRAM_PREFIX)%,$(BUILD))
 
 define expand_build
-$(target): $(COMMON_SRCS:.c=.o) $($(target)_SRCS:.c=.o)
+$(PROGRAM_PREFIX)$(target): $(COMMON_SRCS:.c=.o) $($(target)_SRCS:.c=.o)
 	$$(LINK.o) $$^ $$(LOADLIBES) $$(LDLIBS) -o $$@
 endef
 $(foreach target,$(BUILD),$(eval $(expand_build)))
