--- a/tools/makefile
+++ b/tools/makefile
@@ -1,15 +1,17 @@
-# This makefile simply reflects the build to the build directory so that we
+# This makefile simply reflects the build to the $(BUILD) directory so that we
 # can make out of directory.  The slightly naughty trick here is that make
 # will first look for makefile (rather than Makefile) and we can then
-# redirect to the build directory.
+# redirect to the $(BUILD) directory.
 
-all $(filter-out all build clean,$(MAKECMDGOALS)): build
-	VPATH=$(CURDIR) $(MAKE) -C build -f ../Makefile $@
+BUILD = build
 
-build:
-	mkdir -p build
+all $(filter-out all $(BUILD) clean,$(MAKECMDGOALS)): $(BUILD)
+	VPATH=$(CURDIR) $(MAKE) -C $(BUILD) -f ../Makefile $@
+
+$(BUILD):
+	mkdir -p $(BUILD)
 
 clean:
-	rm -rf build
+	rm -rf $(BUILD)
 
 .PHONY: clean
