FA sniffer: Changes to ensure 64-bit build works
Also fix BUILD definition in makefiles for practical use.

git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@51164 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,5 +1,5 @@
 # This Makefile is invoked by makefile after setting the working directory to
-# the $(BUILD) directory.
+# the $(BUILD_DIR) directory.
 
 PROGRAM_PREFIX = fa-
 
@@ -27,7 +27,6 @@ CFLAGS += -Wstrict-prototypes
 CFLAGS += -msse
 CFLAGS += -msse2
 CFLAGS += -mfpmath=sse
-CFLAGS += -march=pentium4
 CFLAGS += -ffast-math
 
 CPPFLAGS += -D_GNU_SOURCE
