--- a/tools/makefile
+++ b/tools/makefile
@@ -1,17 +1,17 @@
-# This makefile simply reflects the build to the $(BUILD) directory so that we
-# can make out of directory.  The slightly naughty trick here is that make
-# will first look for makefile (rather than Makefile) and we can then
-# redirect to the $(BUILD) directory.
+# This makefile simply reflects the build to the $(BUILD_DIR) directory so that
+# we can make out of directory.  The slightly naughty trick here is that make
+# will first look for makefile (rather than Makefile) and we can then redirect
+# to the $(BUILD_DIR) directory.
 
-BUILD = build
+BUILD_DIR = build
 
-all $(filter-out all $(BUILD) clean,$(MAKECMDGOALS)): $(BUILD)
-	VPATH=$(CURDIR) $(MAKE) -C $(BUILD) -f ../Makefile $@
+all $(filter-out all $(BUILD_DIR) clean,$(MAKECMDGOALS)): $(BUILD_DIR)
+	VPATH=$(CURDIR) $(MAKE) -C $(BUILD_DIR) -f ../Makefile $@
 
-$(BUILD):
-	mkdir -p $(BUILD)
+$(BUILD_DIR):
+	mkdir -p $(BUILD_DIR)
 
 clean:
-	rm -rf $(BUILD)
+	rm -rf $(BUILD_DIR)
 
 .PHONY: clean
