FA sniffer: Turn off debug and enable -O2
Also properly test feenableexecept() return code and fix optimiser warning.

git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@51198 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -8,8 +8,8 @@ SHELL = bash
 all:    # Default target comes first!
 
 CFLAGS += -std=gnu99
-# CFLAGS += -O2
-CFLAGS += -g
+CFLAGS += -O2
+# CFLAGS += -g
 
 CFLAGS += -Werror
 CFLAGS += -Wall -Wextra
