FA sniffer: Add install target to makefile
Add install target and make optional use of Makefile.private as
generated by dls-release.py.

git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@51482 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,9 +1,20 @@
 # This Makefile is invoked by makefile after setting the working directory to
 # the $(BUILD_DIR) directory.
 
+# Any special installation instructions are picked up from Makefile.private
+# which is created by the dls-release process.
+#    The following symbols are used by this make file to configure the
+# installation and should be defined in this file:
+#
+#    SCRIPT_DIR     Where the executables should be installed
+#    PYTHON         Path to Python executable
+-include $(SRCDIR)/Makefile.private
+
+
 PROGRAM_PREFIX = fa-
 
 SHELL = bash
+INSTALL = install
 
 all:    # Default target comes first!
 
@@ -62,7 +73,8 @@ capture_SRCS += capture.c           # Command line interface
 capture_SRCS += matlab.c            # Matlab header support
 
 
-all: $(patsubst %,$(PROGRAM_PREFIX)%,$(BUILD))
+BUILD_NAMES = $(patsubst %,$(PROGRAM_PREFIX)%,$(BUILD))
+all: $(BUILD_NAMES)
 
 define expand_build
 $(PROGRAM_PREFIX)$(target): $(COMMON_SRCS:.c=.o) $($(target)_SRCS:.c=.o)
@@ -74,3 +86,17 @@ $(foreach target,$(BUILD),$(eval $(expand_build)))
 	set -o pipefail && $(CC) -M $(CPPFLAGS) $(CFLAGS) $< | \
             sed '1s/:/ $@:/' >$@
 include $(patsubst %.c,%.d,$(foreach target,$(BUILD),$($(target)_SRCS)))
+
+
+# Installation: we install all the built executables in $(SCRIPT_DIR) and
+# install a lightly edited wrapper to run fa-viewer.
+
+FA_SUBST = s:^PYTHON=.*$$:PYTHON="$(PYTHON)":; \
+           s:^HERE=.*$$:HERE="$(SRCDIR)"/python:
+
+install: $(BUILD_NAMES)
+	[ -n '$(SCRIPT_DIR)' -a -n '$(PYTHON)' ] || { \
+            echo >&2 Must define SCRIPT_DIR and PYTHON; false; }
+	$(INSTALL) $^ $(SCRIPT_DIR)
+	sed <$(SRCDIR)/python/fa-viewer >$(SCRIPT_DIR)/fa-viewer '$(FA_SUBST)'
+	chmod +x $(SCRIPT_DIR)/fa-viewer
