--- a/dkms.conf
+++ b/dkms.conf
@@ -4,3 +4,4 @@ BUILT_MODULE_NAME[0]="fa_sniffer"
 BUILT_MODULE_LOCATION[0]="kbuild-${kernelver}"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/pci/pcie"
 MAKE[0]="make"
+AUTOINSTALL=YES
