--- a/dkms.conf
+++ b/dkms.conf
@@ -1,5 +1,5 @@
 PACKAGE_NAME="fa_sniffer"
-PACKAGE_VERSION="1.2"
+PACKAGE_VERSION="@VERSION@"
 BUILT_MODULE_NAME[0]="fa_sniffer"
 BUILT_MODULE_LOCATION[0]="kbuild-${kernelver}"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/pci/pcie"
